// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot when expanded 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-tabs__item pf-m-overflow pf-m-current"
    role="presentation"
  >
    <button
      aria-expanded="true"
      aria-haspopup="menu"
      class="pf-v6-c-tabs__link pf-m-expanded"
      role="tab"
      type="button"
    >
      <span
        class="pf-v6-c-tabs__item-text"
      >
        Tab one
      </span>
      <span
        class="pf-v6-c-tabs__link-toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 256 512"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
          <svg
            class="pf-v6-icon-unified"
            viewBox="0 0 32 32"
          >
            <path
              d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
            />
          </svg>
        </svg>
      </span>
    </button>
  </li>
  <div
    data-testid="popper-mock"
  >
    <div
      data-testid="trigger"
    />
    <div
      data-testid="popper"
    >
      <div
        data-testid="menu-mock"
      >
        <div
          data-testid="menu-content-mock"
        >
          <ul
            data-testid="menu-list-mock"
          >
            <li
              id="1-menu-item-mock"
            >
              Tab one
              <p>
                Selected: true
              </p>
            </li>
            <li
              id="2-menu-item-mock"
            >
              Tab two
              <p>
                Selected: false
              </p>
            </li>
          </ul>
        </div>
        <button>
          Select
        </button>
      </div>
    </div>
    <p>
      Append to class name: pf-v6-c-tabs__item pf-m-overflow pf-m-current
    </p>
  </div>
</DocumentFragment>
`;

exports[`Renders tabs passed via overflowingTabs when expanded in strict mode 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-tabs__item pf-m-overflow"
    role="presentation"
  >
    <button
      aria-expanded="true"
      aria-haspopup="menu"
      class="pf-v6-c-tabs__link pf-m-expanded"
      role="tab"
      type="button"
    >
      <span
        class="pf-v6-c-tabs__item-text"
      >
        More
      </span>
      <span
        class="pf-v6-c-tabs__link-toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 256 512"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
          <svg
            class="pf-v6-icon-unified"
            viewBox="0 0 32 32"
          >
            <path
              d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
            />
          </svg>
        </svg>
      </span>
    </button>
  </li>
  <div
    data-testid="popper-mock"
  >
    <div
      data-testid="trigger"
    />
    <div
      data-testid="popper"
    >
      <div
        data-testid="menu-mock"
      >
        <div
          data-testid="menu-content-mock"
        >
          <ul
            data-testid="menu-list-mock"
          >
            <li
              id="1-menu-item-mock"
            >
              Tab one
              <p>
                Selected: false
              </p>
            </li>
            <li
              id="2-menu-item-mock"
            >
              Tab two
              <p>
                Selected: false
              </p>
            </li>
          </ul>
        </div>
        <button>
          Select
        </button>
      </div>
    </div>
    <p>
      Append to class name: pf-v6-c-tabs__item pf-m-overflow
    </p>
  </div>
</DocumentFragment>
`;
